plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.12'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.khistory'
version = '0.0.1-SNAPSHOT'
description = 'Spring Cloud Gateway for services routing'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2024.0.3")
}

dependencies {
	implementation 'io.github.cdimascio:dotenv-java:3.0.0' // ✅ .env 파일 읽기

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'  // ✅ -mvc 제거!
	
	// Redis (Rate Limiting용)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'

	// Security & JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'


	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
